kubernetes/users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: users
  name: users
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: users
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.service: users
    spec:
      containers:
        - image: users:ecommerce
          name: ms-users
          ports:
            - containerPort: 8002
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: users
  name: users
  namespace: ecommerce
spec:
  ports:
    - port: 8002
      targetPort: 8002
  selector:
    io.kompose.service: users
status:
  loadBalancer: {}
