kubernetes/local-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local
  namespace: ecommerce
  labels:
    io.kompose.service: local-frontend
spec:
  selector:
    matchLabels:
      io.kompose.service: local-frontend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.service: local-frontend
    spec:
      containers:
        - name: local-frontend
          image: frontend:ecommerce
          imagePullPolicy: IfNotPresent
          workingDir: /usr/src/app
          command:
            - "/bin/sh"
            - "-c"
          args:
            - "cd frontend && yarn && yarn start"
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - mountPath: /usr/src/app
              name: local-react
      volumes:
        - name: local-react
          hostPath:
            path:  /run/desktop/mnt/host/wsl/ecommerce-mern
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: local-service
  namespace: ecommerce
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: local
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-ingress
  namespace: ecommerce
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: local-service
            port:
              number: 80
