kubernetes/local-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-ecommerce
  namespace: ecommerce
  annotations:    
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: users
            port:
              number: 8002
      - path: /api/products
        pathType: Prefix
        backend:
          service:
            name: products
            port:
              number: 8003
      - path: /api/orders
        pathType: Prefix
        backend:
          service:
            name: orders
            port:
              number: 8004
